== 1.0.0.beta5

* major changes
 * Using VirtualClass as proxy for type compilation (RubyLess, Zafu).
 * Caching Roles and VirtualClass.
 * Added 'integer' property with index.

== 1.0.0.beta4

* major changes
 * Removed BaseContact and Reference classes.
 * Removed super user (not needed anymore).
 * Upgraded to Property 2.0 (should resolve memory leak)
 * Added support for Scoped indices.
 * Added support for field indices.

== 1.0.0.beta3 2010-09-17

* major changes
 * created Zena::Remote API
 * fixed Ajax operations and tests
 * fixed forms to create/update new objects
 * added dynamic translations
 * better querybuilder integration relative to SELECT clauses
 * fixed date parsing
 * added safe 'send' method
 * added support to create and update Roles

== 1.0.0.beta2 2010-07-24

* major changes
 * fixed connection timezone with PostgreSQL

== 1.0.0.beta1 2010-07-23

* major changes
 * complete rewrite of the storage engine (Property gem)
 * rewrite of the template engine Zafu to use RubyLess
 * rewrite of the query compilation engine to use RubyLess and offer better introspection
 * XML API with support for query builder queries
 * enhanced attributes support (indexing, inheritance, type)
 * changed bricks layout to be like gems
 * pdf generation support
 * started PostgreSQL support
 * inline JS windows instead of popup with attach/dettach support

== 0.16.6 2010-04-23

* 1 minor enhancement
  * fixed gem loading when brick is deactivated

== 0.16.5 2010-04-15

* 2 major enhancements
  * added a way to easily check duplicate names when adding documents
  * ruby 1.9 compatibility fixes

* 3 minor enhancements
  * better default +login mode
  * fixed image cache stamp not always used
  * some minor bug fixes

== 0.16.4 2010-02-22

* 3 major enhancements
  * fixed installation and runtime bugs on Windows
  * moved ruby files in 'lib' into their Zena namespace
  * german translations [Lars Kanis]

* 2 minor enhancements
  * fixed edgy bug with name duplicates