@@ -77,7 +77,7 @@ module Zena
           rows.fetch_row[0].to_i
         end
 
-        # Return a string matching the pseudo sql function.
+        # Return a string matching the sqless function.
         def sql_function(function, key)
           return key unless function
           case function
